<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleOrden">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalles_orden"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/red"
            android:textAllCaps="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camarones"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:hint="2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:enabled="false"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taco_pulpo"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:hint="5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:enabled="false"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultra"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:hint="6"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:enabled="false"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pacifico"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:hint="2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:enabled="false"
            android:layout_marginBottom="6dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mesa"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmar órden"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="6dp"
            />

    </LinearLayout>

</ScrollView>