<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pedidos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tus_pedidos"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/red"
            android:textAllCaps="true"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrden"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <RadioGroup
            android:id="@+id/rgTipoOrden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/rbPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:enabled="false"

                />
            <RadioButton
                android:id="@+id/rbMesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mesa"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:enabled="false"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            />

    </LinearLayout>

</ScrollView>