<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    >

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="1"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp"
        >

        <Button
            android:id="@+id/btnPlatillos"
            android:text="@string/platillos"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/navy_blue"
            app:cornerRadius="0dp"
            android:padding="0dp"
            />
        <Button
            android:id="@+id/btnBebidas"
            android:text="@string/bebidas"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/navy_blue"
            app:cornerRadius="0dp"
            android:padding="0dp"

            />
        <Button
            android:id="@+id/btnPostres"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/postres"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/navy_blue"
            />

    </GridLayout>

</LinearLayout>